# smschecker

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  run_tests.py
app/: errors.py  fake.py  old.py  settings.py
app/new/: __init__.py
app/new/providers/: __init__.py  base.py  primary.py  secondary.py
tests/: test_factory.py  test_sms_new.py  test_sms_old.py
tests/structure/: test_base_provider.py  test_fake.py  test_new_primary_privder.py  test_new_secondary_privder.py  test_old.py
