[project]
name = "sms_provider_refactor"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0",
    "pytest-timeout>=2.4",
]

[tool.pytest.ini_options]
timeout = 30

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

